--- a/notebooks/single_modality/ATAC_rename_clusters.Rmd
+++ b/notebooks/single_modality/ATAC_rename_clusters.Rmd
@@ -7,8 +7,9 @@ params:
   out_prefix: "/data/proj/GCB_MB/bcd_CT/single-cell/results/"
   modality: "ATAC"
   feature: "peaks"
-  input: "results/multimodal_data/single_modality/ATAC/seurat/peaks/Seurat_object_clustered.Rds"
-  output: "results/multimodal_data/single_modality/ATAC/seurat/peaks/Seurat_object_clustered_renamed.Rds"
+  input: "/data/proj/GCB_MB/bcd_CT/single-cell/results/multimodal_data/single_modality/ATAC/seurat/peaks/Seurat_object_clustered.Rds"
+  integrated: "/data/proj/GCB_MB/bcd_CT/single-cell/results/multimodal_data/single_modality/ATAC/seurat/peaks/integration/integration_RNA.Rds"
+  output: "/data/proj/GCB_MB/bcd_CT/single-cell/results/multimodal_data/single_modality/ATAC/seurat/peaks/Seurat_object_clustered_renamed.Rds"
 ---
 
 ```{r setup, include=FALSE}
@@ -24,9 +25,8 @@ set.seed(1234)
 ```
 
 ```{r load_data}
-#seurat <- readRDS(file=paste0(params$out_prefix,'/multimodal_data/single_modality/',params$modality,'/seurat/',params$feature,'/Seurat_object_clustered.Rds'))
 seurat <- readRDS(file=params$input)
-DimPlot(seurat,label=TRUE)
+DimPlot(seurat)
 ```
 
 ```{r recluster_function}
@@ -91,7 +91,7 @@ p1 <- DimPlot(seurat,label=TRUE,repel=TRUE,label.size = 4) + NoLegend()
 p2 <- DimPlot(seurat,label=TRUE,group.by='H3K27ac_ident',repel=TRUE,label.size = 4) + NoLegend()
 p1+p2
 ```
-# Rbfox3 - pan-neuronal clusters #3, 6, 9, 11, 15
+# Rbfox3 - pan-neuronal clusters #3, 6, 7, 14
 ```{r}
 DimPlot(seurat,label=TRUE) + NoLegend()
 FeaturePlot(seurat,'Rbfox3',max.cutoff = 3)
@@ -103,7 +103,7 @@ VlnPlot(seurat,"Rbfox3",pt.size = 0) + NoLegend()
 # Neurod1 - excitatory
 # Slc17a7 - excitatory 
 # Foxg1 - Telencephalon
-# Excitatory - 3, 11, 15
+# Excitatory - 3,
 ```{r plot_markers}
 DimPlot(seurat,label=TRUE) + NoLegend()
 FeaturePlot(seurat,'Neurod1',max.cutoff = 3)
@@ -113,7 +113,7 @@ VlnPlot(seurat,"Slc17a7")
 FeaturePlot(seurat,'chr12-49372226-49402169',max.cutoff = 3) + ggtitle("Foxg1") # Foxg1 locus
 VlnPlot(seurat,'chr12-49372226-49402169') + ggtitle("Foxg1")
 ```
-# Inbibitory - 6,9.11
+# Inbibitory - 6,7,14
 
 ```{r}
 DimPlot(seurat,label=TRUE) + NoLegend()
@@ -123,7 +123,7 @@ FeaturePlot(seurat,'Gad2',max.cutoff = 3)
 VlnPlot(seurat,"Gad2")
 
 ```
-
+# Dlx5/6 - Inhibitory
 ```{r}
 DimPlot(seurat,label=TRUE) + NoLegend()
 FeaturePlot(seurat,'Dlx5',max.cutoff = 3)
@@ -136,7 +136,7 @@ VlnPlot(seurat,"Notch1")
 
 ```
 
-# Cluster 11 - markers of both microglia and neurons
+# Cluster 11 - Weird markers
 ```{r}
 DimPlot(seurat,label=TRUE) + NoLegend()
 FeaturePlot(seurat,'C1qb',max.cutoff = 3)
@@ -155,24 +155,23 @@ VlnPlot(seurat,"Slc17a7")
 
 
 
-```{r rename_L1,fig.width=24,fig.height=8}
+```{r rename_L1,fig.width=12,fig.height=4}
 idents_L1 <- c(
-  '0' = 'Vascular',
-  '1' = 'Astroependymal',
+  '0' = 'Astroependymal',
+  '1' = 'Vascular',
   '2' = 'Astroependymal',
   '3' = 'Neurons',
-  '4' = 'Oligodendrocytes',
-  '5' = 'Immune',
-  '6' = 'Neurons_Inhibitory',
-  '7' = 'Astroependymal',
+  '4' = 'Immune',
+  '5' = 'Oligodendrocytes',
+  '6' = 'Neurons',
+  '7' = 'Neurons',
   '8' = 'Vascular',
-  '9' = 'Neurons',
+  '9' = 'Astroependymal',
   '10' = 'Astroependymal',
-  '11' = 'Neurons',
-  '12' = 'Oligodendrocytes',
+  '11' = 'Oligodendrocytes',
+  '12' = 'Olfactory ensheating cells',
   '13' = 'Astroependymal',
-  '14' = 'Olfactory ensheating cells',
-  '15' = 'Neurons'
+  '14' = 'Neurons'
 )
 seurat.renamed                 <- RenameIdents(seurat,idents_L1)
 seurat.renamed$idents_L1       <- seurat.renamed@active.ident
@@ -183,26 +182,23 @@ p2 <- DimPlot(seurat.renamed,label=TRUE,repel = TRUE, group.by = 'seurat_cluster
 
 p1+p2
 ```
-
-
-```{r rename_L2, fig.width=24, fig.height=8}
+```{r rename_L2, fig.width=12, fig.height=4}
 idents_L2 <- c(
-    '0' = 'Vascular endothelialal cells',
-    '1' = 'Astrocytes',
+    '0' = 'Astrocytes',
+    '1' = 'Vascular endothelialal cells',
     '2' = 'Astrocytes',
     '3' = 'Neurons_Excitatory',
-    '4' = 'Oligodendrocytes',
-    '5' = 'Microglia',
-    '6' = 'Immature neurons',
-    '7' = 'Choroid-ependymal cells',
+    '4' = 'Microglia',
+    '5' = 'Oligodendrocytes',
+    '6' = 'Neurons_Inhibitory',
+    '7' = 'Neurons_Inhibitory',
     '8' = 'Vascular leptomeningeal cells',
-    '9' = 'Neurons_Inhibitory',
-    '10' = 'Bergmann glia',
-    '11' = 'Neurons',
-    '12' = 'Immature Oligodendrocytes',
+    '9' = 'Bergmann glia',
+    '10' = 'Choroid-ependymal cells',
+    '11' = 'Immature Oligodendrocytes',
+    '12' = 'Olfactory ensheating cells',
     '13' = 'Radial glia',
-    '14' = 'Olfactory ensheating cells',
-    '15' = 'Immature neurons')
+    '14' = 'Neurons_Inhibitory')
 
 seurat.renamed                <- RenameIdents(seurat.renamed,idents_L2)
 seurat.renamed$idents_L2      <- seurat.renamed@active.ident
@@ -216,24 +212,23 @@ p3 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',la
 p1+p2+p3
 ```
 
-```{r rename_L3, fig.width=24, fig.height=8}
+```{r rename_L3, fig.width=12, fig.height=4}
 idents_L3 <- c(
-    '0' = 'Vascular endothelialal cells',
-    '1' = 'Telencephalon Astrocytes',
-    '2' = 'Non-telencephalon Astrocytes',
-    '3' = 'Excitatory Neurons 1',
-    '4' = 'Oligodendrocytes',
-    '5' = 'Microglia',
-    '6' = 'Inhibitory Neurons 1',
-    '7' = 'Choroid-ependymal cells',
-    '8' = 'Vascular leptomeningeal cells',
-    '9' = 'Inhibitory Neurons 2',
-    '10' = 'Bergmann glia',
-    '11' = 'Inhibitory Neurons 3',
-    '12' = 'Oligodendrocyte progenitor cells',
-    '13' = 'SVZ Radial glia',
-    '14' = 'Olfactory ensheating cells',
-    '15' = 'Excitatory Neurons 2')
+    '0' = 'Astrocytes_Telencephalon',
+    '1' = 'Vascular_endothelialal_cells',
+    '2' = 'Astrocytes_Non-Telencephalon',
+    '3' = 'Neurons_Excitatory_1',
+    '4' = 'Microglia',
+    '5' = 'Oligodendrocytes mature',
+    '6' = 'Neurons_Inhibitory_1',
+    '7' = 'Neurons_Inhibitory_2',
+    '8' = 'Vascular_leptomeningeal_cells',
+    '9' = 'Bergmann_glia',
+    '10' = 'Choroid-ependymal_cells',
+    '11' = 'Immature_Oligodendrocytes',
+    '12' = 'Olfactory_ensheating_cells',
+    '13' = 'Radial_glia',
+    '14' = 'Neurons_Inhibitory_3')
 
 seurat.renamed                <- RenameIdents(seurat.renamed,idents_L3)
 seurat.renamed$idents_L3      <- seurat.renamed@active.ident
@@ -245,28 +240,26 @@ p3 <- DimPlot(seurat.renamed,label=TRUE,group.by = 'idents_L3',repel = TRUE) + N
 p4 <- DimPlot(seurat.renamed,label=TRUE,repel=TRUE,group.by='seurat_clusters',label.size = 2.5) + NoLegend()
 
 
-p1+p2+p3+p4
+p1+p2+p3
 ```
 
-```{r rename_short, fig.width=24, fig.height=8}
+```{r rename_short, fig.width=12, fig.height=4}
 idents_short <- c(
-    '0' = 'VEC',
-    '1' = 'ACTE',
-    '2' = 'ACNT',
+    '0' = 'AST_TE',
+    '1' = 'VEC',
+    '2' = 'AST_NT',
     '3' = 'EXC1',
-    '4' = 'MOL',
-    '5' = 'MGL',
+    '4' = 'MGL',
+    '5' = 'MOL',
     '6' = 'INH1',
-    '7' = 'CHOR-EPE',
+    '7' = 'INH2',
     '8' = 'VLMC',
-    '9' = 'INH2',
-    '10' = 'ACBG',
-    '11' = 'INH3',
-    '12' = 'OPC-COP',
+    '9' = 'BG',
+    '10' = 'CHOR-EPE',
+    '11' = 'OPC',
+    '12' = 'OEC',
     '13' = 'RGC',
-    '14' = 'OEC',
-    '15' = 'EXC2')
-
+    '14' = 'INH3')
 seurat.renamed                   <- RenameIdents(seurat.renamed,idents_short)
 seurat.renamed$idents_short      <- seurat.renamed@active.ident
 seurat.renamed                   <- SetIdent(seurat.renamed,cells = names(seurat.renamed$seurat_clusters), value = seurat.renamed$seurat_clusters)
@@ -284,7 +277,7 @@ p1+p3+p4
 
 
 ```{r}
-lapply(c('idents_L1','idents_L2','idents_L3','seurat_clusters'),function(x){
+lapply(c('idents_L1','idents_L2','idents_L3','seurat_clusters','idents_short'),function(x){
   p1 <- DimPlot(seurat.renamed, label=TRUE,group.by=x,repel=TRUE) + NoLegend()
   ggsave(plot=p1, filename=paste0(dirname(params$output),'/UMAP_',x,'.png'),width=12,height=12)
 })
